# TriangleMeshDistance

./: CMakeLists.txt  LICENSE  README.md
TriangleMeshDistance/include/tmd/: TriangleMeshDistance.h
tests/: CMakeLists.txt  catch.hpp  tests.cpp
